Move PermGen setting to argLine property